<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="new_note"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_note"
        android:shortcutShortLabel="@string/shortcut_note_short"
        android:shortcutLongLabel="@string/shortcut_note_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="ru.plumsoftware.notepad"
            android:targetClass="ru.plumsoftware.notepad.MainActivity">
            <extra android:name="action" android:value="new_note" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="new_task"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_task"
        android:shortcutShortLabel="@string/shortcut_task_short"
        android:shortcutLongLabel="@string/shortcut_task_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="ru.plumsoftware.notepad"
            android:targetClass="ru.plumsoftware.notepad.MainActivity">
            <extra android:name="action" android:value="new_task" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="voice_note"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_mic"
        android:shortcutShortLabel="@string/shortcut_voice_short"
        android:shortcutLongLabel="@string/shortcut_voice_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="ru.plumsoftware.notepad"
            android:targetClass="ru.plumsoftware.notepad.MainActivity">
            <extra android:name="action" android:value="voice_note" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="ru.plumsoftware.notepad"
            android:targetClass="ru.plumsoftware.notepad.MainActivity">
            <extra android:name="action" android:value="search" />
        </intent>
    </shortcut>
</shortcuts>
